[NNO-12854] - invoke/submit/query игнорируют security атрибуты